Fix spacing and background for job description page.

--- a/jboard.less
+++ b/jboard.less
@@ -6,6 +6,17 @@
   border-radius: @radius !important;
 }
 
+.background(@color){
+  background: @color;
+}
+
+.margins(@top, @bottom, @left, @right){
+  margin-top: @top;
+  margin-bottom: @bottom;
+  margin-left: @left;
+  margin-right: @right;
+}
+
 
 body {
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
@@ -133,6 +144,9 @@ label {
 }
 
 .postBreadCrumb{
+
+  .margins(30px, 30px, 0, 0);
+
   li{
   margin-bottom: 3px;
   border: 1px solid #e1e1e1;
@@ -145,10 +159,11 @@ label {
 }
 
 h2.title{
-  border-top: 1px solid #e1e1e1;
- padding-top: 40px;
- margin-top: 30px;
- padding-bottom: 20px;
+  .margins(20px, 0px, 0px, 0px);
+}
+
+.postingWrapper{
+ .background(#fff);
 }
 
 /* Customize container */
